scrollbar + layout fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,5 +21,7 @@
 
   body {
     @apply bg-gray-800 text-white/75;
+
+    overflow: hidden;
   }
 }
